# Python_Project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PRE_COMMIT_AND_COVERAGE_GUIDE.md  PROJECT_OVERVIEW.md  QUICK_START_GUIDE.md  README.md  cursor-python.toml.example  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  development.rst  index.rst  overview.rst  usage.rst
src/cursor_python/: __init__.py  cli.py  config.py  core.py  version.py
tests/: conftest.py  test_main.py
