[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-python"
version = "0.2.0"
description = "Demonstration CLI for working with randomly generated circles."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "G. Chatzitsompanis" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Documentation",
]
dependencies = [
    'tomli; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "sphinx>=8.1.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "black>=24.8.0",
]
docs = [
    "sphinx>=8.1.0",
]

[project.scripts]
cursor-python = "cursor_python.cli:console_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
exclude = "docs/_build"
pretty = true

