[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-python"
version = "0.2.0"
description = "Demonstration CLI for working with randomly generated circles."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "G. Chatzitsompanis" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Documentation",
    "Development Status :: 4 - Beta",
]
keywords = ["cli", "geometry", "circles", "demo", "example"]
dependencies = [
    'tomli; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "sphinx>=8.1.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "black>=24.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "sphinx>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/Geochatz3/Python_Project"
Documentation = "https://github.com/Geochatz3/Python_Project#readme"
Repository = "https://github.com/Geochatz3/Python_Project"
Issues = "https://github.com/Geochatz3/Python_Project/issues"

[project.scripts]
cursor-python = "cursor_python.cli:console_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --cov=src/cursor_python --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
exclude = "docs/_build"
pretty = true
